--- a/views/index.pug
+++ b/views/index.pug
@@ -1,6 +1,6 @@
 html
   head
-    title='My Web App v 1.0.0'
+    title='Simple Web App v 1.0.0'
     link(rel='stylesheet', href='http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css')
   body
     div.container
