Updated Web App

--- a/views/index.pug
+++ b/views/index.pug
@@ -5,6 +5,6 @@ html
   body
     div.container
       div.jumbotron
-        h1 Hello World 1.0.0!
+        h1 Simple Web App 1.0.0!
         p This is simple Web App Running on Node JS
 
